formatted all classes