@@ -2,25 +2,19 @@ package pl.minigames;
 
 import org.junit.jupiter.api.Test;
 
-import java.io.ByteArrayInputStream;
-import java.io.InputStream;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
-class LottoNumbersGetterTest extends Scan{
+class LottoNumbersGetterTest extends Scan {
 
 
     @Test
-    public void should_return_6_numbers_taken_from_user()
-    {
+    public void should_return_6_numbers_taken_from_user() {
         //given
-        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(new Scanner(System.in),new HashSet<>());
-        Set<Integer> numbers=lottoNumbersGetter.numbersFromUser;
+        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(new Scanner(System.in), new HashSet<>());
+        Set<Integer> numbers = lottoNumbersGetter.numbersFromUser;
         numbers.add(1);
         numbers.add(2);
         numbers.add(3);
@@ -28,35 +22,32 @@ class LottoNumbersGetterTest extends Scan{
         numbers.add(5);
         numbers.add(6);
 
-        assertThat(numbers).isEqualTo(Set.of(1,2,3,4,5,6));
+        assertThat(numbers).isEqualTo(Set.of(1, 2, 3, 4, 5, 6));
 
     }
 
     @Test
-    public void should_return_six_numbers_when_numbers_duplicates()
-    {
+    public void should_return_six_numbers_when_numbers_duplicates() {
         //given
-        List<Integer> givenNumbers = Arrays.asList(1,2,3,3,4,5,6);
-        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(mockScannerIn(givenNumbers),new HashSet<>());
-        Set<Integer> expectedNumbers = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(1,2,3,4,5,6)));
-        final Set<Integer> numbersFromUser=lottoNumbersGetter.numbersFromUser();
+        List<Integer> givenNumbers = Arrays.asList(1, 2, 3, 3, 4, 5, 6);
+        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(mockScannerIn(givenNumbers), new HashSet<>());
+        Set<Integer> expectedNumbers = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5, 6)));
+        final Set<Integer> numbersFromUser = lottoNumbersGetter.numbersFromUser();
         assertThat(numbersFromUser).isEqualTo(expectedNumbers);
     }
+
     @Test
-    public void should_return_six_numbers_when_one_is_not_in_range()
-    {
+    public void should_return_six_numbers_when_one_is_not_in_range() {
         //given
-        Set<Integer> givenNumbers=Set.of(1,2,3,4,5,101,6);
-        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(mockScannerIn(givenNumbers),new HashSet<>());
-        Set<Integer> expectedNumbers= Collections.unmodifiableSet(new HashSet<>(Arrays.asList(1,2,3,4,5,6)));
+        Set<Integer> givenNumbers = Set.of(1, 2, 3, 4, 5, 101, 6);
+        LottoNumbersGetter lottoNumbersGetter = new LottoNumbersGetter(mockScannerIn(givenNumbers), new HashSet<>());
+        Set<Integer> expectedNumbers = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(1, 2, 3, 4, 5, 6)));
 
 
         final Set<Integer> numbersFromUser = lottoNumbersGetter.numbersFromUser();
 
         assertThat(numbersFromUser).isEqualTo(expectedNumbers);
     }
-
-
 
 
 }
